--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
   "name": "seneca-user",
-  "version": "0.0.0",
-  "description": "user plugin for seneca",
-  "main": "lib/user.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": "",
+  "description": "User management plugin for the seneca module.",
+  "version": "0.1.1",
   "keywords": [
     "seneca",
     "user",
     "plugin"
   ],
   "author": "Richard Rodger",
-  "license": "BSD",
-
-  "dependencies": {
-    "underscore":     "1.1.x",
-    "node-uuid":      "*"
+  "license": "MIT",
+  "main": "lib/user.js",
+  "scripts": {
+    "test": "node test/travis.js"
   },
-
+  "files": [
+    "LICENSE.txt",
+    "README.md",
+    "lib"
+  ],
+  "engines": {
+    "node": ">=0.8"
+  },
+  "dependencies": {
+    "underscore": "~1.1.7",
+    "node-uuid":  "~1.4.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rjrodger/seneca-user.git"
+  },
   "devDependencies": {
-    "vows":"*",
-    "async":"*",
-    "eyes":"*",
-    "gex":"*"
+    "async": "*",
+    "eyes": "*",
+    "gex": "*"
   }
 }
