--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seneca-user",
   "description": "User management plugin for the seneca module.",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "keywords": [
     "seneca",
     "user",
@@ -22,16 +22,17 @@
     "node": ">=0.8"
   },
   "dependencies": {
-    "underscore": "~1.1.7",
-    "node-uuid":  "~1.4.0"
+    "underscore": "~1.4.4",
+    "node-uuid": "~1.4.0"
+  },
+  "devDependencies": {
+    "gex": "~0.0.3",
+    "chai": "~1.5.0",
+    "async": "~0.1.22",
+    "seneca": "~0.5.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/rjrodger/seneca-user.git"
-  },
-  "devDependencies": {
-    "async": "*",
-    "eyes": "*",
-    "gex": "*"
   }
 }
