--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seneca-user",
   "description": "User management plugin for the seneca module.",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "keywords": [
     "seneca",
     "user",
@@ -18,18 +18,15 @@
     "README.md",
     "lib"
   ],
-  "engines": {
-    "node": ">=0.8"
-  },
   "dependencies": {
-    "underscore": "~1.4.4",
-    "node-uuid": "~1.4.0"
+    "underscore": "~1.5.1",
+    "node-uuid": "~1.4.1"
   },
   "devDependencies": {
-    "gex": "~0.0.3",
-    "chai": "~1.5.0",
-    "async": "~0.2.5",
-    "seneca": ">=0.5.9"
+    "gex": "~0.1.1",
+    "chai": "~1.7.2",
+    "async": "~0.2.9",
+    "seneca": "~0.5.10"
   },
   "repository": {
     "type": "git",
