--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seneca-user",
   "description": "User management plugin for the seneca module.",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "keywords": [
     "seneca",
     "user",
@@ -11,7 +11,7 @@
   "license": "MIT",
   "main": "lib/user.js",
   "scripts": {
-    "test": "node test/travis.js"
+    "test": "node_modules/.bin/mocha test/*.test.js"
   },
   "files": [
     "LICENSE.txt",
@@ -26,7 +26,8 @@
     "gex": "~0.1.1",
     "chai": "~1.7.2",
     "async": "~0.2.9",
-    "seneca": "~0.5.11"
+    "seneca": "~0.5.12",
+    "mocha": "~1.13.0"
   },
   "repository": {
     "type": "git",
