--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seneca-user",
   "description": "User management plugin for the seneca module.",
-  "version": "0.2.8",
+  "version": "0.2.10",
   "keywords": [
     "seneca",
     "user",
@@ -19,18 +19,18 @@
     "user.js"
   ],
   "dependencies": {
-    "underscore": "~1.5.2",
+    "underscore": "~1.6.0",
     "node-uuid": "~1.4.1"
   },
   "peerDependencies": {
-    "seneca": ">=0.5.16"
+    "seneca": "*"
   },
   "devDependencies": {
-    "gex": "~0.1.3",
-    "chai": "~1.8.1",
-    "async": "~0.2.10",
-    "mocha": "~1.17.1",
-    "seneca": "~0.5.16"
+    "gex": "~0.1.4",
+    "chai": "~1.9.1",
+    "async": "~0.9.0",
+    "mocha": "~1.20.1",
+    "seneca": "~0.5.17"
   },
   "repository": {
     "type": "git",
