--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "chai": "~1.9.1",
     "async": "~0.9.0",
     "mocha": "~1.20.1",
-    "seneca": "~0.5.17"
+    "seneca": "^0.6.0"
   },
   "repository": {
     "type": "git",
