--- a/package.json
+++ b/package.json
@@ -7,16 +7,27 @@
     "user",
     "plugin"
   ],
-  "author": "Richard Rodger",
+  "author": {
+    "name": "Richard Rodger",
+    "email": "richard@ricebridge.com",
+    "url": "http://richardrodger.com/"
+  },
   "license": "MIT",
   "main": "user.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha test/*.test.js"
+    "test": "lab"
   },
   "files": [
     "LICENSE.txt",
     "README.md",
     "user.js"
+  ],
+  "contributors": [
+    {
+      "name": "Mircea Alexandru",
+      "email": "mircea.alexandru@gmail.com",
+      "url": "https://github.com/mirceaalexandru"
+    }
   ],
   "dependencies": {
     "underscore": "~1.6.0",
@@ -26,10 +37,9 @@
     "seneca": "*"
   },
   "devDependencies": {
-    "gex": "~0.1.4",
     "chai": "~1.9.1",
-    "async": "~0.9.0",
-    "mocha": "~1.20.1",
+    "lab": "^5.13.0",
+    "lodash": "^3.10.0",
     "seneca": "^0.6.0"
   },
   "repository": {
