--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "main": "user.js",
   "scripts": {
-    "test": "lab"
+    "test": "lab test/*.test.js -r console -v -L -m 3000 -t 70"
   },
   "files": [
     "LICENSE.txt",
@@ -36,8 +36,10 @@
   },
   "devDependencies": {
     "chai": "~1.9.1",
-    "lab": "^5.13.0",
-    "lodash": "^3.10.0",
+    "lab": "6.x.x",
+    "eslint-config-seneca": "1.x.x",
+    "eslint-plugin-hapi": "2.x.x",
+    "eslint-plugin-standard": "1.x.x",
     "seneca": "0.7.2"
   },
   "repository": {
