--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: node_js
+sudo: false
+
 node_js:
-  - "0.11"
   - "0.10"
-  - "0.8"
+  - "0.12"
+  - "4"
+  - "5"
+
+cache:
+  directories:
+  - node_modules
