--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "README.md",
     "user.js"
   ],
+  "engines": {
+    "node": ">=0.10.0"
+  },
   "dependencies": {
     "underscore": "~1.6.0",
     "node-uuid": "~1.4.1"
