--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "main": "user.js",
   "scripts": {
-    "test": "lab test/*.test.js -r console -v -L -m 3000 -t 70",
+    "test": "lab test/*.test.js -r console -v -L -m 3000 -t 70 | coveralls",
     "annotate": "docco user.js -o doc"
   },
   "files": [
