--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
   },
   "devDependencies": {
     "chai": "~1.9.1",
-    "lab": "6.x.x",
+    "code": "^1.5.0",
     "coveralls": "^2.11.6",
     "eslint-config-seneca": "1.x.x",
     "eslint-plugin-hapi": "2.x.x",
     "eslint-plugin-standard": "1.x.x",
+    "lab": "6.x.x",
     "seneca": "0.7.2"
   },
   "repository": {
