--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
       "name": "Mircea Alexandru",
       "email": "mircea.alexandru@gmail.com",
       "url": "http://www.alexandrumircea.ro"
-    }, {
+    },
+    {
       "name": "Cristian Kiss",
       "email": "kissdevel@gmail.com",
       "url": "https://github.com/ckiss"
@@ -46,11 +47,12 @@
   "devDependencies": {
     "code": "1.5.0",
     "coveralls": "2.11.6",
+    "docco": "0.7.0",
     "eslint-config-seneca": "1.x.x",
-    "eslint-plugin-hapi": "2.x.x",
+    "eslint-plugin-hapi": "4.x.x",
     "eslint-plugin-standard": "1.x.x",
     "lab": "6.x.x",
-    "seneca": "0.7.2"
+    "seneca": "plugin"
   },
   "repository": {
     "type": "git",
