fixes for tests to support seneca 2.x

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   "dependencies": {
     "eraro": "0.4.1",
     "lodash": "3.10.1",
-    "node-uuid": "1.4.7"
+    "node-uuid": "1.4.7",
+    "seneca-entity": "0.0.1"
   },
   "devDependencies": {
     "code": "1.5.0",
