--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
   "dependencies": {
     "eraro": "0.4.1",
     "lodash": "3.10.1",
-    "node-uuid": "1.4.7",
-    "seneca-entity": "0.0.1"
+    "node-uuid": "1.4.7"
   },
   "devDependencies": {
     "code": "1.5.0",
@@ -59,7 +58,8 @@
     "eslint-plugin-hapi": "4.x.x",
     "eslint-plugin-standard": "1.x.x",
     "lab": "6.x.x",
-    "seneca": "plugin"
+    "seneca": "plugin",
+    "seneca-entity": "0.0.1"
   },
   "repository": {
     "type": "git",
