--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 sudo: false
 
+env:
+  - SENECA_VER=@1.x.x
+  - SENECA_VER=@2.x.x
+
 node_js:
   - "0.10"
   - "0.12"
@@ -10,6 +14,9 @@ node_js:
 cache:
   directories:
   - node_modules
+
+before_script:
+  - npm install seneca$SENECA_VER
 
 after_script:
   npm run coverage
