--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "eslint-plugin-standard": "1.x.x",
     "lab": "6.x.x",
     "seneca": "plugin",
-    "seneca-entity": "0.0.1"
+    "seneca-entity": "1.1.x"
   },
   "repository": {
     "type": "git",
