--- a/.travis.yml
+++ b/.travis.yml
@@ -6,21 +6,17 @@ env:
   - SENECA_VER=@2.x.x
 
 node_js:
-  - "0.10"
-  - "0.12"
-  - "4"
-  - "5"
   - "6"
+  - "5"
+  - "4"
 
 cache:
   directories:
   - node_modules
 
 before_script:
-  - if [[ $TRAVIS_NODE_VERSION == "6" ]]; then export LAB_FLAGS="--leaks"; else export LAB_FLAGS=""; fi
   - npm uninstall seneca
   - npm install seneca$SENECA_VER
-  - echo FLAGS:$LAB_FLAGS
 
 after_script:
-  npm run coverage
+  - npm run coverage
