--- a/package.json
+++ b/package.json
@@ -49,22 +49,27 @@
   },
   "dependencies": {
     "eraro": "0.4.1",
-    "lodash": "4.13.x",
+    "lodash": "4.14.2",
     "node-uuid": "1.4.7"
   },
   "devDependencies": {
-    "code": "1.5.0",
-    "coveralls": "2.11.6",
-    "docco": "0.7.0",
-    "eslint-config-seneca": "1.x.x",
+    "code": "3.0.x",
+    "coveralls": "2.11.x",
+    "docco": "0.7.x",
+    "eslint-config-seneca": "3.x.x",
     "eslint-plugin-hapi": "4.x.x",
-    "eslint-plugin-standard": "1.x.x",
-    "lab": "6.x.x",
+    "eslint-plugin-standard": "2.x.x",
+    "lab": "10.9.x",
+    "pre-commit": "1.1.3",
     "seneca": "plugin",
     "seneca-entity": "1.2.x"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/senecajs/seneca-user.git"
-  }
+  },
+  "pre-commit": [
+    "test",
+    "lint"
+  ]
 }
