--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "eslint-plugin-hapi": "4.x.x",
     "eslint-plugin-standard": "2.x.x",
     "lab": "10.9.x",
-    "pre-commit": "1.1.3",
+    "pre-commit": "1.1.x",
     "seneca": "plugin",
     "seneca-entity": "1.2.x"
   },
