--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "dependencies": {
     "eraro": "0.4.1",
     "lodash": "4.15.0",
-    "node-uuid": "1.4.7"
+    "uuid": "^3.0.0"
   },
   "devDependencies": {
     "async": "2.0.x",
