--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,13 @@ language: node_js
 sudo: false
 
 env:
-  - SENECA_VER=@1.x.x
-  - SENECA_VER=@2.x.x
-  - SENECA_VER=@3.x.x
+  - SENECA_VER=seneca@2.x.x
+  - SENECA_VER=seneca@3.x.x
+  - SENECA_VER=seneca@plugin
+  - SENECA_VER=senecajs/seneca
 
 node_js:
+  - "8"
   - "6"
   - "4"
 
@@ -16,7 +18,7 @@ cache:
 
 before_script:
   - npm uninstall seneca
-  - npm install seneca$SENECA_VER
+  - npm install $SENECA_VER
 
 after_script:
   - npm run coveralls
