--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "license": "MIT",
   "main": "user.js",
   "scripts": {
-    "test": "lab -v -L -P test -r console -m 3000 -t 70 -I URL,URLSearchParams,SharedArrayBuffer,Atomics,BigUint64Array,BigInt64Array,BigInt",
-    "coveralls": "lab -s -P test -r lcov  -I WebAssembly | coveralls",
-    "coverage": "lab -v -P test -L -t 70 -r html -I WebAssembly > doc/coverage.html",
-    "prettier": "prettier --write --no-semi --single-quote *.js lib/*.js test/*.js"
+    "test": "lab -v -L -P test -r console -m 3000 -t 70",
+    "doc": "seneca-doc",
+    "coveralls": "lab -s -P test -r lcov | coveralls",
+    "prettier": "prettier --write --no-semi --single-quote *.js lib/*.js test/*.js",
+    "clean-npm": "rm -rf node_modules package-lock.json",
+    "clean-yarn": "rm -rf node_modules yarn.lock",
+    "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
+    "repo-publish": "npm run prettier && npm test && npm run doc && npm run repo-tag && npm publish --access public"
   },
   "files": [
     "LICENSE",
@@ -45,22 +49,23 @@
     "Sorin Silaghi (https://github.com/sorin7486)"
   ],
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=8"
   },
   "dependencies": {
-    "eraro": "1.0",
-    "lodash": "4.17",
+    "eraro": "1.1",
+    "lodash": "^4.17.15",
     "uuid": "3.3"
   },
   "devDependencies": {
-    "async": "2",
-    "code": "4",
-    "coveralls": "3",
-    "lab": "14",
-    "prettier": "1",
-    "seneca": "plugin",
-    "seneca-basic": "0",
-    "seneca-entity": "2"
+    "@hapi/code": "^6.0.0",
+    "@hapi/lab": "^19.1.0",
+    "async": "^3.1.0",
+    "coveralls": "^3.0.5",
+    "prettier": "^1.18.2",
+    "seneca": "^3.12.1",
+    "seneca-basic": "^0.6.0",
+    "seneca-entity": "^4.1.0",
+    "seneca-promisify": "^0.8.0"
   },
   "repository": {
     "type": "git",
