--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@seneca/user",
   "description": "User management plugin for Seneca",
-  "version": "3.4.0",
+  "version": "4.0.0",
   "keywords": [
     "seneca",
     "user",
@@ -19,10 +19,10 @@
     "doc": "seneca-doc",
     "coveralls": "lab -s -P test -r lcov | coveralls",
     "prettier": "prettier --write --no-semi --single-quote *.js lib/*.js test/*.js",
-    "clean-npm": "rm -rf node_modules package-lock.json",
-    "clean-yarn": "rm -rf node_modules yarn.lock",
+    "reset": "npm run clean && npm i && npm test",
+    "clean": "rm -rf node_modules package-lock.json yarn.lock",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
-    "repo-publish": "npm run clean-npm && npm i --registry http://registry.npmjs.org && npm run prettier && npm test && npm run doc && npm run repo-tag && npm publish --access public --registry http://registry.npmjs.org"
+    "repo-publish": "npm run clean && npm i --registry=http://registry.npmjs.org && npm run prettier && npm test && npm run repo-tag && npm publish --access public --registry=http://registry.npmjs.org"
   },
   "files": [
     "LICENSE",
@@ -53,20 +53,20 @@
     "node": ">=8"
   },
   "dependencies": {
-    "eraro": "1.1",
+    "eraro": "2.1",
     "lodash": "^4.17.15",
-    "uuid": "3.3"
+    "uuid": "3.4"
   },
   "devDependencies": {
-    "async": "^3.1.0",
-    "coveralls": "^3.0.6",
-    "prettier": "^1.18.2",
+    "async": "^3.1.1",
+    "coveralls": "^3.0.9",
+    "prettier": "^1.19.1",
     "seneca": "plugin",
     "seneca-basic": "^0.6.0",
-    "seneca-doc": "^1.4.0",
-    "seneca-entity": "^5.2.0",
-    "seneca-plugin-validator": "^0.3.0",
-    "seneca-promisify": "^1.1.0"
+    "seneca-doc": "^2.0.1",
+    "seneca-entity": "^7.0.0",
+    "seneca-plugin-validator": "^0.6.0",
+    "seneca-promisify": "^1.2.0"
   },
   "repository": {
     "type": "git",
