--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seneca-user",
   "description": "User management plugin for Seneca",
-  "version": "2.1.4",
+  "version": "2.2.0",
   "keywords": [
     "seneca",
     "user",
@@ -18,7 +18,11 @@
     "test": "lab -v -L -P test -r console -m 3000 -t 70 -I URL,URLSearchParams,SharedArrayBuffer,Atomics,BigUint64Array,BigInt64Array,BigInt",
     "coveralls": "lab -s -P test -r lcov  -I WebAssembly | coveralls",
     "coverage": "lab -v -P test -L -t 70 -r html -I WebAssembly > doc/coverage.html",
-    "prettier": "prettier --write --no-semi --single-quote *.js lib/*.js test/*.js"
+    "prettier": "prettier --write --no-semi --single-quote *.js lib/*.js test/*.js",
+    "reset": "npm run clean && npm i && npm test",
+    "clean": "rm -rf node_modules package-lock.json yarn.lock",
+    "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
+    "repo-publish": "npm run clean && npm i --registry=http://registry.npmjs.org && npm run prettier && npm test && npm run repo-tag && npm publish --access public --registry=http://registry.npmjs.org"
   },
   "files": [
     "LICENSE",
@@ -48,19 +52,19 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "eraro": "1.0",
-    "lodash": "4.17",
-    "uuid": "3.3"
+    "eraro": "^2.1.0",
+    "lodash": "^4.17.15",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "async": "2",
-    "code": "4",
+    "async": "3",
+    "code": "5",
     "coveralls": "3",
     "lab": "14",
     "prettier": "1",
-    "seneca": "plugin",
-    "seneca-basic": "0",
-    "seneca-entity": "2"
+    "seneca": "^3.20.0",
+    "seneca-basic": "^1.0.0",
+    "seneca-entity": "^7.0.0"
   },
   "repository": {
     "type": "git",
