--- a/package.json
+++ b/package.json
@@ -61,10 +61,10 @@
     "async": "^3.1.1",
     "coveralls": "^3.0.9",
     "prettier": "^1.19.1",
-    "seneca": "plugin",
-    "seneca-basic": "^0.6.0",
-    "seneca-doc": "^2.0.1",
-    "seneca-entity": "^7.0.0",
+    "seneca": "^3.20.1",
+    "seneca-basic": "^1.0.0",
+    "seneca-doc": "^2.1.0",
+    "seneca-entity": "^7.1.0",
     "seneca-plugin-validator": "^0.6.0",
     "seneca-promisify": "^1.2.0"
   },
