--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "main": "user.js",
   "scripts": {
     "test": "lab -v -L  -t 70 -P test -r console -o stdout -r html -o test/coverage.html",
+    "test-msgs": "lab -t 100 --coverage-exclude lib -P messages.test -r console -o stdout -r html -o test/coverage.html",
     "doc": "seneca-doc",
     "coveralls": "lab -s -P test -r lcov | coveralls",
     "prettier": "prettier --write --no-semi --single-quote *.js lib/*.js test/*.js",
@@ -61,7 +62,7 @@
     "coveralls": "^3.0.9",
     "prettier": "^1.19.1",
     "seneca": "^3.20.1",
-    "seneca-doc": "^2.1.0",
+    "seneca-doc": "^2.1.1",
     "seneca-entity": "^7.1.0",
     "seneca-joi": "^7.0.1",
     "seneca-msg-test": "^2.2.0",
