--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "dependencies": {
     "nid": "^0.3.2",
-    "uuid": "3.4"
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "async": "^3.1.1",
