--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@seneca/user",
   "description": "User management plugin for Seneca",
-  "version": "5.0.2",
+  "version": "5.0.3",
   "keywords": [
     "seneca",
     "user",
@@ -30,7 +30,7 @@
     "README.md",
     "user.js",
     "user-docs.js",
-    "lib/hasher.js"
+    "lib"
   ],
   "contributors": [
     "Mircea Alexandru <mircea.alexandru@gmail.com> (http://www.alexandrumircea.ro)",
