--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "author": {
     "name": "Richard Rodger",
-    "email": "richard@ricebridge.com",
+    "email": "richard@voxgig.com",
     "url": "http://richardrodger.com/"
   },
   "license": "MIT",
@@ -56,16 +56,16 @@
   },
   "dependencies": {
     "nid": "^1.1.0",
-    "uuid": "^7.0.2"
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "coveralls": "^3.0.9",
-    "prettier": "^1.19.1",
-    "seneca": "^3.20.2",
+    "coveralls": "^3.1.0",
+    "prettier": "^2.0.5",
+    "seneca": "^3.20.3",
     "seneca-doc": "^2.1.3",
-    "seneca-entity": "^7.1.1",
+    "seneca-entity": "^8.0.0",
     "seneca-joi": "^7.0.2",
-    "seneca-msg-test": "^2.4.0",
+    "seneca-msg-test": "^2.5.0",
     "seneca-plugin-validator": "^0.6.1",
     "seneca-promisify": "^1.2.0"
   },
