--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@master"
-      - name: "TODO to Issue"
+      - name: "todo-to-issue"
         uses: "alstr/todo-to-issue-action@master"
         with:
           REPO: ${{ github.repository }}
