--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -12,6 +12,7 @@ jobs:
           BEFORE: ${{ github.event.before }}
           SHA: ${{ github.sha }}
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LABEL: "TODO"
+          LABEL: "TODO:"
           COMMENT_MARKER: "//"
+          INPUT_INCLUDE_EXT: "js"
         id: "todo"
