--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "main": "user.js",
   "scripts": {
-    "test": "lab -v -L  -t 100 -P test -r console -o stdout -r html -o test/coverage.html",
+    "test": "lab -v -L  -t 90 -P test -I AggregateError,atob,btoa,AbortController,AbortSignal,EventTarget,Event,MessageChannel,MessagePort,MessageEvent,performance -r console -o stdout -r html -o test/coverage.html",
+    "test-some": "lab -v -L -P test -g",
     "test-msgs": "lab -t 90 --coverage-exclude lib/hasher.js -P messages.test -r console -o stdout -r html -o test/coverage.html",
     "doc": "seneca-doc",
     "coveralls": "lab -s -P test -r lcov | coveralls",
@@ -52,22 +53,24 @@
     "Sorin Silaghi (https://github.com/sorin7486)"
   ],
   "engines": {
-    "node": ">=8"
+    "node": ">=12"
   },
   "dependencies": {
-    "nid": "^1.3.3",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "coveralls": "^3.1.0",
-    "prettier": "^2.1.2",
-    "seneca": "^3.22.0",
+    "@hapi/code": "8",
+    "@hapi/lab": "23",
+    "coveralls": "^3.1.1",
+    "prettier": "^2.6.2",
     "seneca-doc": "^2.1.3",
-    "seneca-entity": "^10.0.2",
-    "seneca-joi": "^7.0.2",
-    "seneca-msg-test": "^2.5.0",
-    "seneca-plugin-validator": "^0.6.1",
-    "seneca-promisify": "^2.0.0"
+    "seneca-msg-test": "^3.4.0",
+    "@seneca/maintain": "^0.0.22"
+  },
+  "peerDependencies": {
+    "seneca": ">=3",
+    "seneca-promisify": ">=2",
+    "seneca-entity": ">=16"
   },
   "repository": {
     "type": "git",
