--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
     # manually install peerdeps for node 12,14
     - run: npm i seneca seneca-promisify seneca-entity
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm run coveralls
 
     - name: Coveralls
       uses: coverallsapp/github-action@master
