--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@seneca/user",
   "description": "User management plugin for Seneca",
-  "version": "6.3.0",
+  "version": "6.4.0",
   "keywords": [
     "seneca",
     "user",
@@ -56,21 +56,21 @@
     "node": ">=12"
   },
   "dependencies": {
-    "uuid": "^9.0.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@hapi/code": "8",
-    "@hapi/lab": "23",
+    "@hapi/code": "9",
+    "@hapi/lab": "25",
     "coveralls": "^3.1.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.1",
     "seneca-doc": "^2.1.3",
-    "seneca-msg-test": "^3.4.0",
-    "@seneca/maintain": "^0.0.30"
+    "seneca-msg-test": "^4.1.0",
+    "@seneca/maintain": "^0.1.0"
   },
   "peerDependencies": {
-    "seneca": ">=3",
+    "seneca": ">=3||>=4.0.0-rc2",
     "seneca-promisify": ">=3",
-    "seneca-entity": ">=23"
+    "seneca-entity": ">=26"
   },
   "repository": {
     "type": "git",
